force-app/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>TMS PO Group</label>
    <nameField>
        <displayFormat>TMSPO-{YYYY}{MM}-{00000}</displayFormat>
        <label>TMS Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMS PO Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>