force-app/main/default/objects/Purchase_Order__c/fields/AutoNum__c.field-meta.xml
<CustomField>
    <fullName>AutoNum__c</fullName>
    <description>Used for naming of records</description>
    <displayFormat>{00000}</displayFormat>
    <label>AutoNum</label>
    <type>AutoNumber</type>
</CustomField>