force-app/main/default/objects/Purchase_Order__c/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <label>Franchise</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Franchise_Code</valueSetName>
    </valueSet>
</CustomField>