force-app/main/default/objects/Purchase_Order__c/fields/Production_Month__c.field-meta.xml
<CustomField>
    <fullName>Production_Month__c</fullName>
    <label>Production Month</label>
    <type>Date</type>
</CustomField>